# OaaS_platform

./: .gitignore  README.md
algorithm-repo/: README.md  docker-compose.yml  start_local.sh
algorithm-repo/backend/: .dockerignore  Dockerfile  debug_algorithms.ipynb  requirements.txt
algorithm-repo/backend/src/: main.py  worker.py
oaas-platform/: README.md  docker-compose.yml
oaas-platform/backend/: Dockerfile  pyproject.toml
oaas-platform/backend/migrations/models/: 0_20240603124040_init.py
oaas-platform/backend/oaasplatform/: config.py  main.py
oaas-platform/backend/oaasplatform/crud/: executions.py  images.py  instances.py  management.py
oaas-platform/backend/oaasplatform/database/: config.py  models.py
oaas-platform/backend/oaasplatform/nocrud/: callback.py  direct_execution.py  info.py
oaas-platform/backend/oaasplatform/routes/: callback.py  debug.py  designs.py  executions.py  images.py  instances.py  management.py
oaas-platform/backend/oaasplatform/schemas/: descriptors.py  designs.py  executions.py  images.py  info.py  instances.py  management.py
oaas-platform/backend/oaasplatform/utils/: algorithm_repository_wrapper.py  docker.py  docker_register.py  info.py  master.py
oaas-platform/backend/tests/: conftest.py  test_hello.py
oaas-platform/playbooks/: integration_javier_algorithm.ipynb  integration_ndt.ipynb  requirements.txt  unit_test_algorithms.ipynb  usage_nfplaning.ipynb
openapi/OptimaixAlgRepo/: main.yml
openapi/OptimaixMaster/: main.yml
openapi/OptimaixMaster/parameters/: instanceId.yml  (+1 more)
openapi/OptimaixOaasNode/: main.yml
(+39 files in other folders)
